fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,7 @@
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
+  right: 0;
 }
 
 .tooltip:hover .tooltiptext {
